[package]
name = "passage"
version = "0.1.0"
authors = ["Christian Stefanescu <chris@0chris.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.4"
anyhow = "1.0"
secrecy = "0.6"
rpassword = "4.0"
structopt = {version="0.3", features=["color"]}
lazy_static = "1.4"
