[package]
name = "passage"
version = "1.0.0-rc.1"
authors = ["Christian Stefanescu <chris@0chris.com>"]
edition = "2018"
description = "A password manager with age encryption"
license = "MIT"
repository = "https://www.github.com/stchris/passage"
readme = "README.md"
keywords = ["cli", "encryption", "age", "password", "manager"]
categories = ["command-line-utilities", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.5"
anyhow = "1.0"
secrecy = "0.7"
rpassword = "5.0"
structopt = {version="0.3", features=["color"]}
lazy_static = "1.4"
clipboard = "0.5"
directories-next = "2.0"
toml = "0.5"
serde =  {version = "1.0", features=["derive"]}
keyring = "0.10"
whoami = "1.0"


[target.'cfg(unix)'.dependencies]
fork = "0.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1"
